# agentic-scraper

./: MANIFEST.in  README.md  install.sh  output_0.md  pyproject.toml  start.sh
fastapi/: README.md  __init__.py  config.py  history_manager.py  main.py  models.py  pdf_processor.py  proxy_manager.py  pyproject.toml  requirements.txt  scraper.py
tests/: pyproject.toml  test_parser.py  test_scraper.py
web_scraper/: __init__.py  cli.py  models.py  output.py  output_0.json  output_https_grants.gov.txt  parser.py  scraper.py  utils.py
