[tool.poetry]
name = "web_scraper"
version = "0.1.0"
description = "A CLI-based web scraper"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
packages = [
    { include = "web_scraper" },
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
tqdm = "^4.64.1"
playwright = "^1.30.0"
beautifulsoup4 = "^4.10.0"
aiofiles = "^23.1.0"
rich = "^10.12.0"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
fastapi = "^0.100.0"
pydantic = "^2.0.0"
PyPDF2 = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
playwright = "^1.30.0"

[tool.poetry.scripts]
web_scraper = "web_scraper.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
