[tool.poetry]
name = "fastapi-web-scraper"
version = "0.1.0"
description = "A FastAPI-based web scraper"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
beautifulsoup4 = "^4.10.0"
aiohttp = "^3.8.1"
pydantic = "^1.10.2"
PyPDF2 = "^1.26.0"
fastapi-limiter = "^0.1.5"
redis = "^4.3.4"
aiofiles = "^23.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
