[tool.poetry]
name = "agentic-scraper-tests"
version = "0.1.0"
description = "Tests for the Agentic Scraper project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
